--- a/Publishing-Workflow-Sasken/src/main/resources/static/create.html
+++ b/Publishing-Workflow-Sasken/src/main/resources/static/create.html
@@ -66,15 +66,15 @@
           <form id="blogForm" class="space-y-6">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
               <div>
-                <label for="author" class="block text-sm font-semibold text-gray-700 mb-2">Author</label>
-                <select
-                  id="author"
-                  name="author"
+                <label for="authorName" class="block text-sm font-semibold text-gray-700 mb-2">Author Name</label>
+                <input
+                  type="text"
+                  id="authorName"
+                  name="authorName"
+                  required
+                  placeholder="Enter your name..."
                   class="w-full p-4 border border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-200 bg-white"
-                >
-                  <option value="1">Sophia Carter</option>
-                  <option value="2">John Doe</option>
-                </select>
+                />
               </div>
               
               <div class="md:col-span-2">
@@ -156,41 +156,52 @@
     </main>
 
     <script>
-      async function submitPost() {
+      async function submitPost(status) {
         const title = document.getElementById("title").value.trim();
         const content = document.getElementById("content").value.trim();
-        const authorId = 1; // Simulated author ID
+        const authorName = document.getElementById("authorName").value.trim();
 
-        if (!title || !content) {
-          alert("Title and content are required.");
+        if (!title || !content || !authorName) {
+          alert("Title, content, and author name are required.");
           return;
         }
 
-        // Step 1: Save post as DRAFT
-        const response = await fetch("http://localhost:8080/api/posts", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ title, content, authorId }),
-        });
+        try {
+          // Step 1: Save post as DRAFT
+          const response = await fetch("http://localhost:8080/api/posts", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ title, content, authorName }),
+          });
 
-        if (!response.ok) {
-          alert("Failed to save post.");
-          return;
-        }
+          if (!response.ok) {
+            const errorText = await response.text();
+            alert("Failed to save post: " + errorText);
+            return;
+          }
 
-        const savedPost = await response.json();
+          const savedPost = await response.json();
 
-        // Step 2: Change status from DRAFT to REVIEW
-        const statusRes = await fetch(
-          `http://localhost:8080/api/posts/${savedPost.id}/status?status=REVIEW&userId=${authorId}`,
-          { method: "PUT" }
-        );
+          if (status === 'REVIEW') {
+            // Step 2: Change status from DRAFT to REVIEW
+            const statusRes = await fetch(
+              `http://localhost:8080/api/posts/${savedPost.id}/status?status=REVIEW&userId=1`,
+              { method: "PUT" }
+            );
 
-        if (statusRes.ok) {
-          alert("Blog submitted for review!");
-          window.location.href = "posts.html";
-        } else {
-          alert("Saved as draft, but failed to send to review.");
+            if (statusRes.ok) {
+              alert("Blog submitted for review!");
+              window.location.href = "posts.html";
+            } else {
+              alert("Saved as draft, but failed to send to review.");
+            }
+          } else {
+            alert("Post saved as draft successfully!");
+            window.location.href = "drafts.html";
+          }
+        } catch (error) {
+          console.error("Error:", error);
+          alert("An error occurred while saving the post.");
         }
       }
     </script>
